RESOLVED FIXED229854
REGRESSION(r275515): pointer-events:none may get stuck in LFC runs
https://bugs.webkit.org/show_bug.cgi?id=229854
Summary REGRESSION(r275515): pointer-events:none may get stuck in LFC runs
Antti Koivisto
Reported 2021-09-03 01:29:08 PDT
We only update run style with diff >= StyleDifference::Repaint but pointer-events changes don't require repaint.
Attachments
patch (5.67 KB, patch)
2021-09-03 01:34 PDT, Antti Koivisto
no flags
Antti Koivisto
Comment 1 2021-09-03 01:32:51 PDT
Antti Koivisto
Comment 2 2021-09-03 01:34:06 PDT
EWS
Comment 3 2021-09-04 06:20:45 PDT
Committed r282045 (241345@main): <https://commits.webkit.org/241345@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 437252 [details].
Note You need to log in before you can comment on or make changes to this bug.