REGRESSION(r275515): pointer-events:none may get stuck in LFC runs https://bugs.webkit.org/show_bug.cgi?id=229854 rdar://81165275

Reviewed by Alan Bujtas.

Source/WebCore:

We only update run style with diff >= StyleDifference::Repaint but pointer-events changes don't require repaint.

Test: fast/events/pointer-events-mutation.html

* rendering/RenderBlockFlow.cpp:
(WebCore::RenderBlockFlow::styleDidChange):
* rendering/RenderBox.cpp:
(WebCore::RenderBox::styleDidChange):
* rendering/RenderInline.cpp:
(WebCore::RenderInline::styleDidChange):

Fix by pushing the new style to LFC unconditionally. This has no meaningful cost.

LayoutTests:

* fast/events/pointer-events-mutation-expected.txt: Added.
* fast/events/pointer-events-mutation.html: Added.


Canonical link: https://commits.webkit.org/241345@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@282045 268f45cc-cd09-0410-ab3c-d52691b4dbfc